--- a/src/App.css
+++ b/src/App.css
@@ -153,13 +153,18 @@ h1 {
   opacity: 0;
 }
 #projects {
-  height: 210vh !important;
+  height: auto !important;
   display: flex;
   justify-content: center;
   width: var(--vw);
 }
 #projects > div {
   margin-top: 100px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  
+
 }
 .projectHeader {
   display: flex;
@@ -171,6 +176,7 @@ h1 {
   height: 1px;
   background-color: white;
   opacity: 0.5;
+
 }
 /*project window section */
 
@@ -301,6 +307,7 @@ h1 {
   gap: 10px;
   margin-top: 200px;
   opacity: 0;
+  padding: 10px;
   /* enable this only for mobile 
   padding: 10px; 
   width:70vw;
@@ -318,6 +325,9 @@ h1 {
 .stack-project {
   display: flex;
   gap: 10px;
+  flex-wrap: wrap;
+  width: 90%;
+  font-size: 15px;
 }
 .para-project {
   word-wrap: break-word;
@@ -488,6 +498,7 @@ h1 {
   }
   #projects > div{
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
