--- a/src/App.css
+++ b/src/App.css
@@ -43,17 +43,52 @@ padding-top: 10px;
   font-size: 15px;
   font-family: monospace;
 }
+
 #sections > div {
   position: relative;
   top: -100px;
   cursor: pointer;
   font-size: 15px;
   opacity: 0;
+  padding: 20px;
 }
 #sections > div > a {
   text-decoration: none;
   color: #ffffffde;
   cursor: pointer;
+  z-index: 16;
+}
+#boxhover{
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  opacity: 0;
+background-color: rgb(255, 255, 255,0.1);
+
+  border-radius: 8px;
+  pointer-events: none; /* Makes the box unclickable */
+  transition: all 0.3s ease; /* Smooth movement and resizing */
+  
+}
+#boxhover.slow{
+  animation: slowopacity 0.1s 0.3s both;
+}
+
+
+@keyframes slowopacity {
+  0%{
+    opacity: 0;
+    background-color: rgb(255, 255, 255,0.1);
+
+  }
+  100%{
+    opacity: 1;
+    background-color: rgb(255, 255, 255,0.1);
+
+  }
 }
 #logo-outer{
   position: relative;
